# topicaxis-classifiers

./: .gitignore  README.md  bentofile.yaml  classifiers.py  pyproject.toml  test_classifiers.sh  train_category_classifiers.sh
data/categories/: .gitignore
train/categories/: basic.py  bert.py
